--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="Joke">
+        <p class="jokes">Hello</p>
+    </div>
+    <div class="container" id = "gallery">
+        <input type="text" id="text">
+        <button id = "submit">Submit</button>
+        <input type='file' accept='image/*' onchange='openPhoto(event)'><br>
+    </div>
+    <script src="script.js"></script>
+    <script src="promises.js"></script>
+    <script src="gallery.js"></script>
 </body>
 </html>
